--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "seed": "ts-node prisma/seed.ts",
     "build": "rimraf dist && npx tsc",
     "start": "npm run build && node dist/index.js",
-    "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\""
+    "dev": "cross-env NODE_ENV=local npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
+    "dev:staging": "cross-env NODE_ENV=staging npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
+    "dev:production": "cross-env NODE_ENV=production npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\""
   },
   "keywords": [],
   "author": "",
@@ -40,6 +42,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.5",
     "@types/uuid": "^10.0.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
